# TUnA-R

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  train.py
configs/: base_config.yaml  config.yaml  esm_gp.yaml  esm_mlp.yaml  tfc.yaml  tuna.yaml
configs/dataset/: gold-standard.yaml
configs/model/: esm_gp.yaml  esm_mlp.yaml  t-fc.yaml  tuna.yaml
configs/pl_module/: mlp.yaml  transformer.yaml
example/: inference.ipynb
src/: layers.py  models.py
src/datamodule/: ppi_module.py
src/layers/: multiheadattention.py  transformer.py
src/models/: mlp.py  tuna.py
src/pl_modules/: base_module.py  lit_mlp.py  lit_tuna.py
src/tuna/config/: model_config.py
src/tuna/datamodule/: datamodule_utils.py  embedding_utils.py  ppi_module.py
src/tuna/inference/: cli.py  embeddings.py  export.py  pipeline.py  predictor.py  wrappers.py
src/tuna/layers/: _multiheadattention.py  _transformer.py  _transformer_block.py
src/tuna/models/: _mlp.py  _transformer.py  _tuna.py  llgp_utils.py  mask_maker.py  mask_utils.py  model_utils.py  ppi_predictor.py
src/tuna/pl_modules/: base_module.py  lit_mlp.py  lit_ppi.py  lit_transformer.py  lit_tuna.py  llgp_utils.py  mask_maker.py
tests/: conftest.py
tests/datamodule/: test_datamodule_utils.py  test_ppi_module.py
tests/layers/: test_multiheadattention.py  test_transformer_block.py
tests/models/: test_mlp.py  test_transformer.py
