[project]
name = "tuna-r"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "fair-esm>=2.0.0",
    "hydra-core>=1.3.2",
    "isort>=6.0.1",
    "lightning>=2.5.2",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
    "torch>=2.7.1",
    "torch-optimizer>=0.3.0",
    "torchmetrics>=1.7.3",
    "uncertaintyawaredeeplearn",
    "wandb>=0.20.1",
]

[tool.uv.sources]
uncertaintyawaredeeplearn = { git = "https://github.com/jlparkI/uncertaintyAwareDeepLearn", rev = "0.0.5" }
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend-select = ["E", "F", "I"]